css/style.css
body{
    background: #f4f4f4;
}


/* navbar */
.navbar{
    min-height: 33px !important;
    margin-bottom: 0;
    border-radius: 0;
}

.navbar > li{
    padding-top: 6px important;
    padding-bottom: 0;
    height: 33px;
}

.navbar {
    background-color: #ff5921;
  }
  .navbar .navbar-brand {
    font-size: 30px;
    color: #ecf0f1;
    font-family: 'Ubuntu', sans-serif;
  }
  .navbar .navbar-brand:hover,
  .navbar .navbar-brand:focus {
    cursor: default;
  }
  .navbar .navbar-text {
    color: #ecf0f1;
  }
  .navbar .navbar-text a {
    color: #a58b72;
  }
  .navbar .navbar-text a:hover,
  .navbar .navbar-text a:focus {
    color: #a58b72; 
  }
  .navbar .navbar-nav .nav-link {
    color: #ecf0f1;
    border-radius: .25rem;
    margin: 0 0.25em;
  }
  .navbar .navbar-nav .nav-link:not(.disabled):hover,
  .navbar .navbar-nav .nav-link:not(.disabled):focus {
    color: #a58b72;
  }
  .navbar .navbar-nav .nav-item.active .nav-link,
  .navbar .navbar-nav .nav-item.active .nav-link:hover,
  .navbar .navbar-nav .nav-item.active .nav-link:focus,
  .navbar .navbar-nav .nav-item.show .nav-link,
  .navbar .navbar-nav .nav-item.show .nav-link:hover,
  .navbar .navbar-nav .nav-item.show .nav-link:focus {
    color: #a58b72;
    background-color: #ff5921;
  }
  .navbar .navbar-toggle {
    border-color: #ff5921;
  }
  .navbar .navbar-toggle:hover,
  .navbar .navbar-toggle:focus {
    background-color: #ff5921;
  }
  .navbar .navbar-toggle .navbar-toggler-icon {
    color: #ecf0f1;
  }
  .navbar .navbar-collapse,
  .navbar .navbar-form {
    border-color: #ecf0f1;
  }
  .navbar .navbar-link {
    color: #ecf0f1;
  }
  .navbar .navbar-link:hover {
    color: #a58b72;
  }

/* custom */

  .main-color-bg{
    background-color: #ff5921 !important;
    border-color: #ecf0f1 !important;
    color:white;
  }

  /* header */

  #header{
      background: #333333;
      color:white;
      padding-bottom: 10px;
      margin-bottom: 15px;
  }

  #header .create{
      padding-top:20px;
  }
  /* main */


/* side Dashboard */
.list-dash-item{
  display: grid;
  grid-template-columns:  3fr 1fr;
 
}
.badge{
  align-self: center;
}
.
  /* Progress Bars */

  .progress-bar{
      background: #333333;
      color: white;
  }


  .dash-box{
      text-align: center;
  }
  

/* footer */
body{
  min-height: 100vh;
  padding-bottom: 50px;
}
#footer{
    background: #333333;
    color:white;
    text-align: center;

    width: 100%;
   
    bottom: 0;
}







  
  @media (max-width: 575px) {
    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
      color: #ecf0f1;
    }
    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
      color: #a58b72;
    }
    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item.active {
      color: #a58b72;
      background-color: #ff5921;
    }

     /* side dashboard */

     .badge{
       width:50%;
     }
    /* website Overview */
    .web-overview .card-body .list-inline{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-gap: 20px;
    
    }
    .web-overview .card-body .list-inline .col-md-3{
      text-align: center;
    }
   
    .table td, .table th {
      padding: 0;
      padding-top: 5px;
      padding-bottom: 5px;
    }
  }
  
  @media (max-width: 767px) {
    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item {
      color: #ecf0f1;
    }
    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
      color: #a58b72;
    }
    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item.active {
      color: #a58b72;
      background-color: #ff5921;
    }

     /* side dashboard */

     .badge{
      width:50%;
    }

    /* website Overview */
    .web-overview .card-body .list-inline{
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      grid-gap: 20px;
      
      }
      .web-overview .card-body .list-inline .col-md-3{
        text-align: center;
      }
  
  }
  
  @media (max-width: 991px) {
    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item {
      color: #ecf0f1;
    }
    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
      color: #a58b72;
    }
    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item.active {
      color: #a58b72;
      background-color: #ff5921;
    }
  }
  
  @media (max-width: 1199px) {
    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item {
      color: #ecf0f1;
    }
    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
      color: #a58b72;
    }
    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
      color: #a58b72;
      background-color: #ff5921;
    }
  }
  
  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item {
    color: #ecf0f1;
  }
  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:hover,
  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:focus {
    color: #a58b72;
  }
  .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item.active {
    color: #a58b72;
    background-color: #ff5921;
  }

